# test

./: test.c
prac1/: CamWithV4L2.h  Makefile  cam_V4L2
prac2/: GPIO_SW  GPIO_TEST  GPIO_sw.c  GPIO_test.c  I2C_GPIO  I2C_GPIO.c  P  P.c  S_GPIO  gpio_interrupt.c  gpio_scanf.c
prac3/: CMakeLists.txt
prac3/inc/: CamWithV4L2.h
prac3/src/: CamWithV4L2.cpp  main.cpp
