CMAKE_MINIMUM_REQUIRED (VERSION 3.1.0)  #3.10.2 -> ok

PROJECT (CAM_V4L2)

SET (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET (CMAKE_cxx_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET (CMAKE_SYSTEM_NAME Linux)
SET (CMAKE_SYSTEM_RPROCESSOR arm)
SET (TOOLCHIAN_DIR "/home/kmj/Edukit_BSP/linaro-4.9.4-gcc/bin")
SET (CMAKE_C_COMPILER ${TOOLCHIAN_DIR}/arm-linux-gnueabihf-gcc)
SET (CMAKE_CXX_COMPILER ${TOOLCHIAN_DIR}/arm-linux-gnueabihf-g++)

INCLUDE_DIRECTORIES (
	${PROJECT_SOURCE_DIR}/inc
       	${PROJECT_SOURCE_DIR}/src
	)
ADD_EXECUTABLE (CAM_V4L2 ${PROJECT_SOURCE_DIR}/src/CamWithV4L2.cpp ${PROJECT_SOURCE_DIR}/src/main.cpp)
TARGET_LINK_LIBRARIES(CAM_V4L2 pthread)
